tests/parser/bug_74/test.m
% (c) Copyright 2020 Florian Schanda

[x, ] = 42
[x, y, ] = potato()
[, x, y] = potato()
[,x,]    = 5

x = [3,]
y = [,4]
z = [,5,]
x = [6;]
y = [;7]
z = [;8;]
x = [9;;]
y = [;;10]
z = [;;11;;12;;]
